added modular, LF to CRLF

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 # node modules
-*/node_modules
+node_modules/
 
 # logs
-*/logs
+logs/
 
 # ssl certificates
-*/ssl
-
-# modular server. i'm still doing this so please don't yet.
-modular/
+ssl/
