--- a/modular/settings.json
+++ b/modular/settings.json
@@ -1,7 +1,7 @@
 {
     "about": {
         "name": "modular-express-server",
-        "displayName": "Modular Express Server",
+        "display_name": "Modular Express Server",
         "description": "A simple, object-oriented Node.js Express server that runs on Modules.",
         "version": "1.0.0",
         "contact": "webmaster@example.com"
