--- a/modular/package.json
+++ b/modular/package.json
@@ -21,32 +21,15 @@
     "url": "https://github.com/ChlodAlejandro/express-server-templates/issues"
   },
   "homepage": "https://github.com/ChlodAlejandro/express-server-templates#readme",
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
-    "async": "^3.2.0",
-    "await": "^0.2.6",
-    "axios": "^0.19.2",
-    "axios-cookiejar-support": "^0.5.1",
-    "bcrypt": "^3.0.8",
-    "better-sqlite3": "^5.4.3",
-    "chance": "^1.1.3",
-    "cheerio": "^0.22.0",
-    "console-stamp": "^0.2.9",
     "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
     "express-useragent": "^1.0.12",
     "fs-jetpack": "^2.2.2",
     "http-status-codes": "^1.4.0",
-    "log-timestamp": "^0.3.0",
-    "readline-promise": "^1.0.4",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "sane": "^4.1.0",
-    "sqlite3": "^4.1.0",
-    "tough-cookie": "^3.0.1"
-  },
-  "engines": {
-    "node": "12.x"
+    "log-timestamp": "^0.3.0"
   }
 }
